# skillvault

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/: cli.py  config.py  conflicts.py  differ.py  exporter.py  models.py  scanner.py  storage.py
src/parsers/: claude_md.py  memory.py  settings.py  skill.py
tests/: conftest.py  test_cli.py  test_config.py  test_conflicts.py  test_differ.py  test_exporter.py  test_scanner.py  test_search.py  test_storage.py
tests/fixtures/memory/: MEMORY.md  some_memory.md
tests/fixtures/project_a/: CLAUDE.md
tests/fixtures/project_b/: CLAUDE.md
